# multi_turtlebot3

./: CMakeLists.txt  README.md  package.xml  setup.py
action/: Charge.action  CheckBattery.action  InspectWaypoint.action  NavigateWaypoint.action
config/: home_navigate_pose_goals.yaml  home_vacuum_pose_goals.yaml  pose_goals_in_map.yaml
launch/: amcl.launch  battery_servers.launch  home_world.launch  home_world_robots.launch  move_base.launch  turtlebot3_bringup.launch  turtlebot3_navigation.launch
rviz/: turtlebot3_navigation.rviz
src/: ChargeActionServer  CheckBatteryActionServer  HomeNavigateActionServer  HomeVacuumActionServer  InitialPose
urdf/: turtlebot3_waffle_robot1.gazebo.xacro  turtlebot3_waffle_robot1.urdf.xacro  turtlebot3_waffle_robot2.gazebo.xacro  turtlebot3_waffle_robot2.urdf.xacro
